added emission breakdown button (not working)

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Sustainability Tracker</h1>
-    <p>Monitor your AI's electricity usage and carbon emissions.</p>
+    <p>Monitor your electricity usage and carbon emissions on the web</p>
   </header>
   <main>
     <section id="electricity">
@@ -20,6 +20,8 @@
       <h2>Carbon Emissions</h2>
       <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
     </section>
+    <button class="button button-breakdown">See your emission breakdown
+    </button>
   </main>
   <footer>
     <p>Powered by AI. Designed for sustainability.</p>
