--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
       <h2>Carbon Emissions</h2>
       <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
     </section>
-    <button class="button button-breakdown">See your emission breakdown
+    <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
     </button>
   </main>
   <footer>
