--- a/Website/index.html
+++ b/Website/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sustainability Tracker</title>
+  <link rel="stylesheet" href="webstyle.css">
 </head>
 <body>
-
+<header>
+  <h1>Sustainability Tracker</h1>
+  <p>Monitor your electricity usage and carbon emissions on the web</p>
+</header>
+<main>
+  <section id="electricity">
+    <h2>Electricity Usage</h2>
+    <p><span id="electricity-usage">0</span> kWh</p>
+  </section>
+  <section id="emissions">
+    <h2>Carbon Emissions</h2>
+    <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
+  </section>
+  </section>
+  <section id="iPhoneCharges">
+    <h2>Number of iPhone Charges</h2>
+    <p><span id="iPhone-Charges">0</span> iPhone Charges</p>
+  </section>
+  <section id="water usage">
+    <h2>Water Usage</h2>
+    <p><span id="water-usage">0</span> 16.9 oz water bottles</p>
+  </section>
+</main>
+<footer>
+  <p>Powered by AI. Designed for sustainability.</p>
+</footer>
+<script src="web.js"></script>
 </body>
 </html>
