--- a/popup.html
+++ b/popup.html
@@ -20,8 +20,9 @@
       <h2>Carbon Emissions</h2>
       <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
     </section>
+    <a href="Website/index.html" target="_blank">
     <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
-    </button>
+    </button></a>
   </main>
   <footer>
     <p>Powered by AI. Designed for sustainability.</p>
