--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
     </section>
     <section id="carbon-rating">
       <h2>This Website's Carbon Rating</h2>
-      <p><b id="carbon-rating-value">0</b> </p>
+      <p><b id="carbon-rating-value">No Rating Found</b></p>
     </section>
     <a href="Website/index.html" target="_blank">
     <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
