--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,11 @@
     </section>
     <section id="emissions">
       <h2>Carbon Emissions</h2>
-      <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
+      <p><span id="carbon-emissions">0</span> g CO<sub>2</sub></p>
+    </section>
+    <section id="carbon-rating">
+      <h2>This Website's Carbon Rating</h2>
+      <p><b id="carbon-rating-value">No Rating Found</b></p>
     </section>
     <a href="Website/index.html" target="_blank">
     <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
