Add loading and loaded status handling in background script; Implement Gabe's API in the backgrounf

--- a/popup.html
+++ b/popup.html
@@ -14,15 +14,15 @@
   <main>
     <section id="electricity">
       <h2>Electricity Usage</h2>
-      <p><span id="electricity-usage">0</span> kWh</p>
+      <p><span id="electricity-usage"></span> kWh</p>
     </section>
     <section id="emissions">
       <h2>Carbon Emissions</h2>
-      <p><span id="carbon-emissions">0</span> g CO<sub>2</sub></p>
+      <p><span id="carbon-emissions"></span> g CO<sub>2</sub></p>
     </section>
     <section id="carbon-rating">
       <h2>This Website's Carbon Rating</h2>
-      <p><b id="carbon-rating-value">No Rating Found</b></p>
+      <p><b id="carbon-rating-value">N/A</b></p>
     </section>
     <a href="Website/index.html" target="_blank">
     <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
