--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
   <main>
     <section id="electricity">
       <h2>Electricity Usage</h2>
-      <p><span id="electricity-usage"></span> kWh</p>
+      <p><span id="electricity-usage"></span> KWh</p>
     </section>
     <section id="emissions">
       <h2>Carbon Emissions</h2>
