--- a/popup.html
+++ b/popup.html
@@ -25,8 +25,8 @@
       <p><b id="carbon-rating-value">N/A</b></p>
     </section>
     <a href="Website/index.html" target="_blank">
-    <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
-    </button>
+      <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown</button>
+    </a>
   </main>
   <footer>
     <p>Powered by AI. Designed for sustainability.</p>
