minor edits (no new features work)

--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
       <p><b id="carbon-rating-value">N/A</b></p>
     </section>
     <a href="Website/index.html" target="_blank">
-    <button id="emission-breakdown-button" class="button button-breakdown">See your emission breakdown
+    <button id="emission-breakdown-button" class="button button-breakdown">See your emission totals
     </button>
   </main>
   <footer>
