--- a/Website/index.html
+++ b/Website/index.html
@@ -15,26 +15,26 @@
   <section id="electricity" class = "enhanced-section">
     <h2>Electricity Usage</h2>
     <p><span id="electricity-usage">0</span> KWh</p>
-    <img src="energy-image.png" alt="iPhone Charges">
+    <img src="WebsiteImages/energy-image.png" alt="iPhone Charges">
   </section>
   <section id="emissions" class = "enhanced-section">
     <h2>Carbon Emissions</h2>
-    <p><span id="carbon-emissions">0</span> kg CO<sub>2</sub></p>
-    <img src="carbon-em-image.png" alt="iPhone Charges">
+    <p><span id="carbon-emissions">0</span> g CO<sub>2</sub></p>
+    <img src="WebsiteImages/carbon-em-image.png" alt="iPhone Charges">
   </section>
   <section id="regular google searches" class = "enhanced-section">
     <h2>Number of Regular Google Searches</h2>
     <p><span id="reg-google-searches">0</span> Regular Google Searches</p>
-    <img src="google-search-image1.png" alt="iPhone Charges">
+    <img src="WebsiteImages/google-search-image1.png" alt="iPhone Charges">
   </section>
   <section id="iPhoneCharges" class="enhanced-section">
     <h2>Number of iPhone Charges</h2>
     <p><span id="iPhone-Charges">0</span> iPhone Charges</p>
-    <img src="iphone-image.png" alt="iPhone Charges">
+    <img src="WebsiteImages/iphone-image.png" alt="iPhone Charges">
   </section>
   <section1 id="HH25">
     <h2>Created for HooHacks 2025</h2>
-    <img src="hoo-hacks25.png" >
+    <img src="WebsiteImages/hoo-hacks25.png" >
   </section1>
 </main>
 <footer>
